apps/base/thomaszachmann/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thomaszachmann
  namespace: web-thomaszachmann
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: thomaszachmann
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
